console-setup (1.35) UNRELEASED; urgency=low

  * Merge from Ubuntu:
    - Treat the Kazakh layout (kz) as non-Latin (LP: #356816).
    - Set default layout for Morocco to 'ma'.
  * Handle temporary output files better in kbdcompiler (closes: #524556).

 -- Colin Watson <cjwatson@debian.org>  Tue, 05 May 2009 18:17:23 +0100

console-setup (1.34) unstable; urgency=medium

  [ Colin Watson ]
  * Fix bashism.

  [ Anton Zinoviev ]
  * Remove committed by mistake debugging code.  Thanks to Colin Watson,
    closes: #527057.
  * Another attempt to fix properly #526862 (still not good for people
    using the combination OADG 109A + kana).

 -- Anton Zinoviev <zinoviev@debian.org>  Tue, 05 May 2009 15:05:21 +0300

console-setup (1.33) unstable; urgency=medium

  [ Colin Watson ]
  * Remove mention of long-dead devfs (closes: #524765).
  * Don't load a font if FONTFACE, FONTSIZE, and FONT are all unset.

  [ Anton Zinoviev ]
  * Do not use missing jp(latin) layout.  Fix bad configuration on
    upgrade.  Thanks to Osamu Aoki, closes: #526862.  Urgency set to
    medium because of this grave bug.
  * Make console-setup-mini to provide console-setup (in order to make it
    installable together with X).
  * Correction in template file: Control+period for Compose instead of
    Alt+period.  Thanks to Kurt Roeckx, closes: #524236.
    
  [ Debconf translations ]
  * Basque. Closes: #522565
  * Galician. Closes: #524261
  * French.
  * Bulgarian.
  
 -- Anton Zinoviev <zinoviev@debian.org>  Mon, 04 May 2009 20:00:02 +0300

console-setup (1.32) unstable; urgency=low

  [ Anton Zinoviev ]
  * Make Alt+ScrollLock generate Show_Registers and Alt+up generate
    KeyboardSignal.  Thanks to Steve Cotton, closes: #523792.

 -- Anton Zinoviev <zinoviev@debian.org>  Sun, 12 Apr 2009 18:32:49 +0300

console-setup (1.31) unstable; urgency=low

  [ Debconf translations ]
  * French corrections (thanks to Florentin Duneau)
  * Portuguese. Closes: #521224
  * Czech. Closes: #521660